fix ice cream on tablet

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -205,7 +205,7 @@ h1 span {
 
   .hero-ice-cream {
     width: 268px;
-    height: 100%;
+    height: 329px;
     bottom: 0px;
     right: 92px;
   }
